--- a/KafkaExamples/.classpath
+++ b/KafkaExamples/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.21.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.21.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/commons-pool-1.6.jar" sourcepath="C:/Users/elink/AppData/Local/Temp/.org.sf.feeling.decompiler1642034633450/source/commons-pool-1.6-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
